# crm_backend

./: .env  Cargo.toml  deneme_müşteri.xlsx  deneme_properties.xlsx  docker-compose.yaml
migrations/: 20260223142705_create_users.sql  20260223143813_create_customers.sql  20260223150314_create_customer_notes.sql  20260223172801_create_properties.sql  20260225071733_create_reminders.sql
src/: database.rs  main.rs
src/commands/: import_customers.rs  import_properties.rs  mod.rs
src/database/: customer.rs  mod.rs  property.rs  reminder.rs  user.rs
src/handlers/: auth.rs  customers.rs  mod.rs  properties.rs  reminders.rs  users.rs
src/models/: auth.rs  customer.rs  mod.rs  properties.rs  reminders.rs  user.rs
