[package]
name = "crm_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "bigdecimal",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2.0.18"
bcrypt = "0.15"
jsonwebtoken = "9"
tower-http = { version = "0.6", features = ["cors"] }
bigdecimal = { version = "0.4", features = ["serde"] }
calamine = "0.24"
